syntax = "proto3";

package stella.rating.v1;

import "google/protobuf/empty.proto";

service RatingService {
  rpc GetRating(GetRatingRequest) returns (Rating) {}
  rpc UpsertRating(UpsertRatingRequest) returns (Rating) {}
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty) {}
}

message Rating {
  int64 entity_id = 1;
  float score = 2;
  int64 user_id = 3;
  string comment = 4;
}

message GetRatingRequest {
  int64 entity_id = 1;
}

message UpsertRatingRequest {
  int64 entity_id = 1;
  int64 user_id = 2;
  int64 score = 3;
  string comment = 4;
}

message DeleteRequest {
  int64 entity_id = 1;
  int64 user_id = 2;
}
